# Frontier-Exploration

./: .gitignore  README.md  setup.cfg
assets/: debugging.md  launch_architecture.md  manual_launch.md
launch/: frontier_explorer.launch.py
ros2_ws/src/frontier_exploration/: package.xml  setup.py
ros2_ws/src/frontier_exploration/frontier_exploration/: frontier_detector.py  frontier_selector.py  slam_state_manager.py
ros2_ws/src/frontier_exploration/launch/: frontier_explorer.launch.py  full_exploration.launch.py  navigation.launch.py  simulation.launch.py
ros2_ws/src/frontier_explorer/: package.xml  setup.py
ros2_ws/src/frontier_explorer/frontier_explorer/: frontier_selector.py
ros2_ws/src/my_nav2_config/config/: nav2_params.yaml
src/: __init__.py  map_listener.py
