<?xml version="1.0"?>
<package format="3">
  <name>frontier_explorer</name>
  <version>0.0.0</version>
  <description>Frontier exploration package for auto-explore behavior</description>

  <maintainer email="contact.ashi.gupta@gmail.com">Ashi Gupta</maintainer>
  <license>Apache-2.0</license>

  <!-- Build tools -->
  <buildtool_depend>ament_python</buildtool_depend>

  <!-- Runtime dependencies -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>

  <!-- Launch files support -->
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
